<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/userIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/repositoryName"
                app:srcCompat="@drawable/git_icon" />

            <TextView
                android:id="@+id/repositoryName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/md_blue_400"
                android:textSize="18sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintEnd_toStartOf="@+id/repositoryLanguage"
                app:layout_constraintStart_toEndOf="@+id/userIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="AppLink" />

            <TextView
                android:id="@+id/repositoryDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/no_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/repositoryName"
                app:layout_constraintTop_toBottomOf="@+id/repositoryName" />

            <TextView
                android:id="@+id/repositoryStar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/ic_star"
                android:drawableLeft="@drawable/ic_star"
                android:drawablePadding="8dp"
                android:gravity="center|start"
                android:text="@string/zero"
                app:layout_constraintEnd_toStartOf="@+id/repositoryBranch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repositoryDescription" />

            <TextView
                android:id="@+id/repositoryBranch"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:drawableStart="@drawable/ic_branch"
                android:drawableLeft="@drawable/ic_branch"

                android:drawablePadding="8dp"
                android:gravity="center|start"
                android:text="@string/zero"
                app:layout_constraintBottom_toBottomOf="@+id/repositoryStar"
                app:layout_constraintEnd_toStartOf="@+id/repositoryOwner"
                app:layout_constraintStart_toEndOf="@+id/repositoryStar"
                app:layout_constraintTop_toTopOf="@+id/repositoryStar" />

            <TextView
                android:id="@+id/repositoryOwner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person"
                android:drawableLeft="@drawable/ic_person"

                android:drawablePadding="8dp"
                android:gravity="center|start"
                app:layout_constraintBottom_toBottomOf="@+id/repositoryStar"
                app:layout_constraintEnd_toEndOf="@+id/repositoryDescription"
                app:layout_constraintStart_toEndOf="@+id/repositoryBranch"
                app:layout_constraintTop_toTopOf="@+id/repositoryStar" />

            <TextView
                android:id="@+id/repositoryLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/repositoryName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/repositoryName"
                tools:text="Kotlin" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>